added 3rd project to portfolio and created an img folder

--- a/contact.html
+++ b/contact.html
@@ -23,7 +23,7 @@
     <div class="contactContent">
 
         <div class="headshot">
-            <img class="headshotImg" src="headshot.jpg" alt="headshot" />
+            <img class="headshotImg" src="./images/headshot.jpg" alt="headshot" />
         </div>
         <div class="card" style="width: 18rem;">
             <div class="card-body">
@@ -31,23 +31,25 @@
 
                 <p class="card-text">Aspiring software programer from New York. Obtained my bachelors in Business
                     Management with a minor in
-                    finance from Molloy College. My main contact points are listed below, feel free to contact me at any time. My Github and Linkedin accounts are also linked below, please click the logos and navigate to my accounts.</p>
-                    <p>Paulginga@hotmail.com</p>
-                    <p>(347)-768-5232</p>
+                    finance from Molloy College. My main contact points are listed below, feel free to contact me at any
+                    time. My Github and Linkedin accounts are also linked below, please click the logos and navigate to
+                    my accounts.</p>
+                <p>Paulginga@hotmail.com</p>
+                <p>(347)-768-5232</p>
             </div>
         </div>
-       
+
 
     </div>
- 
+
     <div class="links">
         <a href="https://github.com/paulmorales7">
-            <img class="img1" src="github logo.png" alt="github logo" />
+            <img class="img1" src="./images/github logo.png " alt="github logo" />
 
         </a>
         <a href="https://www.linkedin.com/in/paul-morales-9a9571189/">
 
-            <img class="img2" src="linkin logo.png" alt="linkin logo" />
+            <img class="img2" src="./images/linkin logo.png" alt="linkin logo" />
         </a>
     </div>
 
