--- a/index.html
+++ b/index.html
@@ -22,13 +22,13 @@
         </div>
 
         <div class="header">
-            <h1>MY PORTFOLIO</h1>
+            <h1>PORTFOLIO</h1>
             <h1 class="name">PAUL MORALES</h1>
             <P class="infoHeader">CLICK ON ANY PICTURE TO USE</P>
         </div>
 
         <a href="https://paulmorales7.github.io/Commit-To-Be-Fit/">
-            <img class="pic1" src=" commit to be fit.png" alt="project1" />
+            <img class="pic1" src="./images/commit to be fit.png" alt="project1" />
 
 
         </a>
@@ -37,12 +37,21 @@
         </div>
 
         <a href="https://paulmorales7.github.io/week-six-hw/">
-            <img class="pic2" src="weather app.png" alt="hw6" />
+            <img class="pic2" src="./images/weather app.png" alt="hw6" />
 
         </a>
         <div>
             <p class="pic2Text">Weather App </p>
-            
+
+        </div>
+
+        <a href="https://banking-app1.herokuapp.com/">
+            <img class="pic2" src="./images/banking app.png" alt="project2" />
+
+        </a>
+        <div>
+            <p class="pic2Text">Banking App </p>
+
         </div>
 
 
