added repo links to projects

--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
         </a>
         <div>
             <p class="pic1Text">BMI and Recipe Generator App</p>
+            <p class="pic1Text">Repo: https://github.com/paulmorales7/Commit-To-Be-Fit.git</p>
         </div>
 
         <a href="https://paulmorales7.github.io/week-six-hw/">
@@ -42,6 +43,7 @@
         </a>
         <div>
             <p class="pic2Text">Weather App </p>
+            <p class="pic2Text">Repo: https://github.com/paulmorales7/week-six-hw.git</p>
 
         </div>
 
@@ -51,6 +53,7 @@
         </a>
         <div>
             <p class="pic2Text">Banking App </p>
+            <p class="pic2Text">Repo: https://github.com/paulmorales7/banking-system.git</p>
 
         </div>
 
