added a tags for links

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         </a>
         <div>
             <p class="pic1Text">BMI and Recipe Generator App</p>
-            <p class="pic1Text">Repo: https://github.com/paulmorales7/Commit-To-Be-Fit.git</p>
+            <p class="pic1Text">Repo: <a>https://github.com/paulmorales7/Commit-To-Be-Fit.git</a></p>
         </div>
 
         <a href="https://paulmorales7.github.io/week-six-hw/">
@@ -43,7 +43,7 @@
         </a>
         <div>
             <p class="pic2Text">Weather App </p>
-            <p class="pic2Text">Repo: https://github.com/paulmorales7/week-six-hw.git</p>
+            <p class="pic2Text">Repo: <a>https://github.com/paulmorales7/week-six-hw.git</a></p>
 
         </div>
 
@@ -53,7 +53,7 @@
         </a>
         <div>
             <p class="pic2Text">Banking App </p>
-            <p class="pic2Text">Repo: https://github.com/paulmorales7/banking-system.git</p>
+            <p class="pic2Text">Repo: <a>https://github.com/paulmorales7/banking-system.git</a></p>
 
         </div>
 
